--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,57 @@
+aiodns==3.5.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.1
+aiohttp-retry==2.9.1
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.11.0
+async-timeout==5.0.1
+attrs==25.4.0
+backoff==2.2.1
+backports.zstd==1.0.0
+bcrypt==5.0.0
+boto3==1.40.55
+botocore==1.40.55
+Brotli==1.1.0
 certifi==2025.10.5
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.0
+colorama==0.4.6
 coloredlogs==15.0.1
 contourpy==1.3.2
+cryptography==45.0.7
 cycler==0.12.1
 dataclasses-json==0.6.7
 decorator==5.2.1
 deep-sort-realtime==1.3.2
 defusedxml==0.7.1
+dnspython==2.8.0
+email-validator==2.3.0
 exceptiongroup==1.3.0
 fast-alpr==0.3.0
 fast-plate-ocr==1.0.2
 fastapi==0.119.0
+fastapi-cli==0.0.14
+fastapi-cloud-cli==0.3.1
 filelock==3.20.0
 flatbuffers==25.9.23
 fonttools==4.60.1
+frozenlist==1.8.0
 fsspec==2025.9.0
 h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
 humanfriendly==10.0
 idna==3.11
 imageio==2.37.0
 imageio-ffmpeg==0.6.0
+inquirerpy==0.3.4
+invoke==2.2.1
+itsdangerous==2.2.0
 Jinja2==3.1.6
+jmespath==1.0.1
 kiwisolver==1.4.9
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
@@ -32,6 +60,7 @@ matplotlib==3.10.7
 mdurl==0.1.2
 moviepy==2.2.1
 mpmath==1.3.0
+multidict==6.7.0
 mypy_extensions==1.1.0
 networkx==3.4.2
 numpy==2.2.6
@@ -54,18 +83,30 @@ onnxruntime-gpu==1.23.0
 open-image-models==0.5.1
 opencv-python==4.12.0.88
 opencv-python-headless==4.12.0.88
+orjson==3.11.3
 packaging==25.0
 pandas==2.3.3
+paramiko==4.0.0
+pfzy==0.3.4
 pillow==11.3.0
 pinggy==0.0.17
 polars==1.34.0
 polars-runtime-32==1.34.0
+prettytable==3.16.0
 proglog==0.1.12
+prompt_toolkit==3.0.52
+propcache==0.4.1
 protobuf==6.32.1
 psutil==7.1.0
+py-cpuinfo==9.0.0
+pycares==4.11.0
+pycparser==2.23
 pydantic==2.12.1
+pydantic-extra-types==2.10.6
+pydantic-settings==2.11.0
 pydantic_core==2.41.3
 Pygments==2.19.2
+PyNaCl==1.6.0
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
@@ -74,22 +115,39 @@ pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
 rich==14.2.0
+rich-toolkit==0.15.1
+rignore==0.7.1
+runpod==1.7.13
+s3transfer==0.14.0
 scipy==1.15.3
 seaborn==0.13.2
+sentry-sdk==2.42.1
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.48.0
 supervision==0.26.1
 sympy==1.14.0
+tomli==2.3.0
+tomlkit==0.13.3
 torch==2.8.0
 torchvision==0.23.0
 tqdm==4.67.1
+tqdm-loggable==0.2
 triton==3.4.0
+typer==0.20.0
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
+ujson==5.11.0
 ultralytics==8.3.213
 ultralytics-thop==2.0.17
 urllib3==2.5.0
 uvicorn==0.37.0
+uvloop==0.22.1
+watchdog==6.0.0
+watchfiles==1.1.1
+wcwidth==0.2.14
+websockets==15.0.1
+yarl==1.22.0
